--- a/hm.css
+++ b/hm.css
@@ -274,6 +274,7 @@ fieldset[disabled] .heima_nav .btn-link:focus{
     background: #f5f5f5;
     border-bottom: 1px solid#ccc;
     padding: 30px 0;
+   
 
 }
 .nav-tabs-product>li{
@@ -344,8 +345,10 @@ fieldset[disabled] .heima_nav .btn-link:focus{
 }
 /* 页签父盒子 */
 .nav-tabs-product-parent{
+
     width: 100%;
     overflow:hidden;
+     float: left;  
 }
 /* 产品盒子 */
 .product_box{
@@ -666,10 +669,13 @@ fieldset[disabled] .heima_nav .btn-link:focus{
     content: "\e92d";
 }
 
-
+.tab-content .new{
+    height: 500px;
+}
 /* 轮番图 */
 .carousel-inner img{
     width:100%;
     height:350px;
     background-size: 100% 100%;
 }
+
